# category-tree-microservice

./: .env.sample  Makefile  README.md  docker-compose.yml  pyproject.toml
category_tree/: __main__.py
category_tree/config/: default.py  utils.py
category_tree/db/alembic/: env.py
category_tree/db/alembic/versions/: 4fe32c8aa969_.py  b0dcc369aaa6_.py  db3cce311c4e_.py
category_tree/db/connection/: session.py
category_tree/db/models/: __init__.py  base.py  category.py  client.py  order.py  product.py
category_tree/endpoints/: __init__.py  category.py  client.py  order.py  ping.py  product.py
category_tree/schemas/: __init__.py  category.py  client.py  order.py  product.py
category_tree/utils/category/: __init__.py  database.py
category_tree/utils/client/: __init__.py  database.py
category_tree/utils/health_check/: __init__.py  database.py
category_tree/utils/order/: __init__.py  database.py  exceptions.py
category_tree/utils/product/: __init__.py  database.py
tests/: conftest.py
tests/fixtures/: category.py  client.py  product.py
tests/test_endpoints/: test_category.py  test_client.py  test_order.py  test_ping.py
tests/test_migrator/: test_stairway.py
tests/utils/: __init__.py  alembic_config.py
